--- a/messages/install.txt
+++ b/messages/install.txt
@@ -1,6 +1,6 @@
-SublimeLinter-contrib-__linter__
+SublimeLinter-contrib-glualint
 -------------------------------
-This linter plugin for SublimeLinter provides an interface to __linter__.
+This linter plugin for SublimeLinter provides an interface to glualint.
 
 For more information, please see:
-https://github.com/__user__/SublimeLinter-contrib-__linter__
+https://github.com/Periapsises/SublimeLinter-contrib-glualint
